# openSYDE

./: .gitignore  ImageMagick_license.txt  README.md  getting_started.txt  license.txt  openSYDE_Core_documentation.chm
opensyde_cmd_line_flash_tool/pjt/: CMakeLists.txt  lint_config.cmake
opensyde_syde_coder_c/libs/osy_core/libtomcrypt/: CMakeLists.txt
opensyde_syde_coder_c/pjt/: CMakeLists.txt  osy_syde_coder_c.pro
opensyde_syde_sup/pjt/: CMakeLists.txt  SYDEsup.pro  lint_config.cmake  toolchain_raspberrypi.cmake  toolchain_raspberrypi64.cmake  toolchain_raspi.cmake  toolchain_ubuntu.cmake  toolchain_ubuntu_64bit.cmake  toolchain_windows.cmake
opensyde_syde_x_gen/pjt/: CMakeLists.txt
opensyde_tool/libs/dbc_driver_library/: CHANGELOG.md  CMakeLists.txt  README.md
opensyde_tool/libs/opensyde_core/: CMakeLists.txt  C_OSCAesFile.h  C_OSCBinaryHash.cpp  C_OSCBinaryHash.h  C_OSCChecksummedIniFile.cpp  C_OSCUtils.cpp  C_OSCUtils.h  C_OSCZipData.cpp  C_OSCZipFile.cpp  C_OSCZipFile.h  C_OscAesFile.cpp  C_OscAesFile.hpp  C_OscChecksummedIniFile.cpp  C_OscUtils.cpp  C_OscUtils.hpp  C_OscZipData.hpp  C_OscZipFile.cpp  C_OscZipFile.hpp  opensyde_core.pri  precomp_headers.hpp  stwerrors.h  stwerrors.hpp
opensyde_tool/libs/opensyde_core/aes/: about_stw.txt
opensyde_tool/libs/opensyde_core/data_dealer/: C_OSCDataDealer.cpp  C_OSCDataDealerNvm.cpp  C_OSCDataDealerNvmSafe.cpp  C_OscDataDealerNvm.cpp  C_OscDataDealerNvm.hpp  C_OscDataDealerNvmSafe.cpp
opensyde_tool/libs/opensyde_core/exports/: C_OSCExportCanOpenConfig.cpp  C_OSCExportCanOpenConfig.h  C_OSCExportCanOpenInit.cpp  C_OSCExportCanOpenInit.h  C_OSCExportCommunicationStack.cpp  C_OSCExportCommunicationStack.h  C_OSCExportDataPool.cpp  C_OSCExportDataPool.h  C_OSCExportHalc.cpp  C_OSCExportHalc.h  C_OSCExportNode.cpp  C_OSCExportNode.h  C_OSCExportOsyInit.cpp  C_OSCExportOsyInit.h  C_OSCExportParamSet.h  C_OSCExportUti.cpp  C_OSCExportUti.h  C_OscExportCanOpenConfig.cpp  C_OscExportCanOpenConfig.hpp  C_OscExportCommunicationStack.hpp  C_OscExportDataPool.cpp  C_OscExportHalc.hpp  C_OscExportNode.hpp  C_OscExportOsyInit.hpp  C_OscExportParamSet.hpp
opensyde_tool/libs/opensyde_core/imports/: C_OSCCanOpenEdsDeviceInfoBlock.h  C_OSCCanOpenEdsFileInfoBlock.cpp  C_OSCCanOpenObjectDictionary.cpp  C_OSCCanOpenObjectDictionary.h  C_OSCImportEdsDcf.cpp  C_OscCanOpenEdsInfoBlock.cpp  C_OscCanOpenEdsInfoBlock.hpp  C_OscCanOpenObjectDictionary.cpp  C_OscCanOpenObjectDictionary.hpp  C_OscEdsDcfImportMessageGroup.hpp  C_OscImportEdsDcf.cpp  C_OscImportEdsDcf.hpp  C_OscImportRamView.cpp
opensyde_tool/libs/opensyde_core/kefex_diaglib/: CCMONProtocol.cpp  CCMONProtocol.h  CCMONProtocolBase.cpp  CCMONProtocolBase.h  CCMONProtocolCANopen.cpp  CCMONProtocolGD.cpp  CCMONProtocolGD.h  CCMONProtocolJ1939.cpp  CCMONProtocolKEFEX.cpp  CCMONProtocolKEFEX.h  CCMONProtocolL2.cpp  CCMONProtocolOpenSYDE.cpp  CCMONProtocolOpenSYDE.h  CCMONProtocolSHIPIPIVA.h  CCMONProtocolSTWFF.cpp  CCMONProtocolSTWFF.h  CCMONProtocolTarget.h  CCMONProtocolXFL.cpp  CCMONProtocolXFL.h  CDLReportEvents.h  CHexFile.cpp  CHexFile.h  CKFXCommConfiguration.cpp  CKFXCommunicationKEFEX.cpp  CKFXProtocol.cpp  CKFXProtocol.h  CSCLResourceStrings.cpp  CXFLActions.cpp  CXFLECUInformation.cpp  CXFLECUInformation.h  CXFLFlashWrite.cpp  CXFLFlashWriteParameters.h  CXFLHexFile.cpp  CXFLHexFile.h  CXFLProtocol.cpp  CXFLProtocol.h  DLStrings.cpp  DLStrings.h
opensyde_tool/libs/opensyde_core/libtomcrypt/: libtomcrypt.pri
opensyde_tool/libs/opensyde_core/logging/: C_OSCLoggingHandler.cpp  C_OscLoggingHandler.cpp  C_OscLoggingHandler.hpp
opensyde_tool/libs/opensyde_core/md5/: CMD5Checksum.cpp  CMD5Checksum.h  C_Md5Checksum.hpp
opensyde_tool/libs/opensyde_core/project/: C_OSCProject.cpp  C_OSCProject.h  C_OSCProjectFiler.cpp  C_OSCProjectFiler.h  C_OscProjectFiler.hpp
opensyde_tool/libs/opensyde_core/protocol_drivers/: C_OSCCanDispatcherOsyRouter.cpp  C_OSCDiagProtocolBase.cpp  C_OSCDiagProtocolBase.h  C_OSCDiagProtocolKfx.cpp  C_OSCDiagProtocolKfx.h  C_OSCDiagProtocolOsy.cpp  C_OSCDiagProtocolOsy.h  C_OSCFlashProtocolStwFlashloader.cpp  C_OSCFlashProtocolStwFlashloader.h  C_OSCProtocolDriverOsy.cpp  C_OSCProtocolDriverOsyTpBase.h  C_OSCProtocolDriverOsyTpCan.cpp  C_OSCProtocolDriverOsyTpCan.h  C_OSCProtocolDriverOsyTpIp.cpp  C_OSCProtocolDriverOsyTpIp.h  C_OscCanDispatcherOsyRouter.hpp  C_OscDiagProtocolBase.hpp  C_OscDiagProtocolKfx.hpp  C_OscDiagProtocolOsy.hpp  C_OscFlashProtocolStwFlashloader.cpp  C_OscFlashProtocolStwFlashloader.hpp  C_OscProtocolDriverOsy.cpp  C_OscProtocolDriverOsy.hpp  C_OscProtocolDriverOsyTpBase.cpp  C_OscProtocolDriverOsyTpCan.hpp  C_OscProtocolDriverOsyTpIp.cpp  C_OscProtocolDriverOsyTpIp.hpp  C_OscProtocolSecuritySubLayer.cpp  C_OscProtocolSerialNumber.cpp  DiagLib_config.h  DiagLib_config.hpp
opensyde_tool/libs/opensyde_core/scl/: CSCLChecksums.cpp  CSCLDateTime.cpp  CSCLIniFile.cpp  CSCLIniFile.h  CSCLString.cpp  CSCLString.h  CSCLStringList.cpp  C_SclChecksums.hpp  C_SclDateTime.hpp  C_SclDynamicArray.hpp  C_SclIniFile.hpp  C_SclString.cpp  C_SclStringList.hpp  SCLDynamicArray.h
opensyde_tool/libs/opensyde_core/security/: C_OSCSecurityPemDatabase.cpp  C_OSCSecurityPemDatabase.h  C_OSCSecurityPemKeyInfo.cpp  C_OSCSecurityRsa.cpp  C_OscSecurityAesCbc.cpp  C_OscSecurityAesFile.hpp  C_OscSecurityEcdsa.cpp  C_OscSecurityEcdsa.hpp  C_OscSecurityPemDatabase.hpp  C_OscSecurityPemKeyInfo.cpp  C_OscSecurityPemKeyInfo.hpp  C_OscSecurityPemSecUpdate.cpp  C_OscSecurityRsa.cpp
opensyde_tool/libs/opensyde_core/stwerrors/: stwerrors.hpp
opensyde_tool/libs/opensyde_core/stwtypes/: stwtypes.hpp
opensyde_tool/libs/opensyde_core/system_package_handling/: C_OscSpaServicePackageCreateUtil.cpp
opensyde_tool/libs/opensyde_core/system_update_package/: C_OscSupDefinitionFiler.hpp  C_OscSupServiceUpdatePackageBase.cpp  C_OscSupServiceUpdatePackageCreate.cpp  C_OscSupServiceUpdatePackageCreate.hpp  C_OscSupServiceUpdatePackageLoad.cpp  C_OscSupServiceUpdatePackageV1.cpp
opensyde_tool/pjt/SYDEflash/: CMakeLists.txt
(+5936 files in other folders)
